--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,44 @@
+# ==========================================
+# APLICACIÓN
+# ==========================================
 spring.application.name=pinceletas-notification-service
+server.port=8085
+
+# ==========================================
+# INFO DE LA APP
+# ==========================================
+app.name=Pinceletas Notification API
+app.desc=Microservicio para gestión de notificaciones de usuarios y administradores
+app.version=1.0.0
+app.dev-name=Agustín Olivera & Tomás Herrado
+app.dev-email=114453@tecnicatura.frc.utn.edu.ar, 114112@tecnicatura.frc.utn.edu.ar
+
+# ==========================================
+# BASE DE DATOS (H2 EN MEMORIA)
+# ==========================================
+spring.datasource.url=jdbc:h2:mem:notifications;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+
+# ==========================================
+# RABBITMQ CONFIG
+# ==========================================
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.listener.simple.auto-startup=true
+
+# ==========================================
+# CORS y SWAGGER
+# ==========================================
+springdoc.packages-to-scan=ar.edu.utn.frc.tup.tesis.pinceletas_notification_service
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.show-actuator=true
+springdoc.api-docs.path=/api-docs
