--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Application Info
 spring.application.name=pinceletas-notification-service
-server.port=8082
+server.port=${PORT:8082}
 
 # App metadata for Swagger
 app.name=Pinceletas Notification Service
@@ -9,27 +9,23 @@ app.version=1.0.0
 app.dev-name=Equipo Pinceletas
 app.dev-email=dev@pinceletas.com
 
-# Database H2
-spring.datasource.url=jdbc:h2:mem:notificaciones
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# PostgreSQL Database
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 
 # JPA / Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 # RabbitMQ Configuration
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.addresses=${CLOUDAMQP_URL}
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.rabbitmq.virtual-host=${RABBITMQ_VHOST:/}
 spring.rabbitmq.template.default-receive-queue=notificaciones.queue
 
 spring.rabbitmq.listener.simple.auto-startup=true
@@ -41,10 +37,10 @@ management.endpoint.health.show-details=always
 
 # Logging
 logging.level.root=INFO
-logging.level.ar.edu.utn.frc.tup.tesis.pinceletas_notification_service=DEBUG
-logging.level.org.springframework.amqp=DEBUG
-logging.level.org.springframework.rabbit=DEBUG
-logging.level.com.rabbitmq=DEBUG
+logging.level.ar.edu.utn.frc.tup.tesis.pinceletas_notification_service=INFO
+logging.level.org.springframework.amqp=INFO
+logging.level.org.springframework.rabbit=INFO
+logging.level.com.rabbitmq=INFO
 
 # SpringDoc / Swagger
 springdoc.api-docs.path=/v3/api-docs
@@ -58,4 +54,4 @@ spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
 spring.jackson.serialization.write-dates-as-timestamps=false
 
 # User Service URL
-app.services.user-auth-service.url=http://localhost:8081
+app.services.user-auth-service.url=${USER_AUTH_SERVICE_URL}
