--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,10 @@ app.dev-name=Equipo Pinceletas
 app.dev-email=dev@pinceletas.com
 
 # PostgreSQL Database
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/pinceletas}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:password}
 
 # JPA / Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -22,9 +22,9 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 # RabbitMQ Configuration
-spring.rabbitmq.addresses=${CLOUDAMQP_URL}
-spring.rabbitmq.username=${RABBITMQ_USERNAME}
-spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.rabbitmq.addresses=${CLOUDAMQP_URL:amqp://localhost:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
 spring.rabbitmq.virtual-host=${RABBITMQ_VHOST:/}
 spring.rabbitmq.template.default-receive-queue=notificaciones.queue
 
